--- a/src/main/resources/static/app/views/weather.html
+++ b/src/main/resources/static/app/views/weather.html
@@ -1,38 +1,22 @@
-<div class="alert alert-danger" ng-if="showError">
-    No data available. Please choose another city or try again later.
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Bootstrap Example</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script> 
+	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js" type="text/javascript"></script> 
+	<script src="../../libs/bootstrap-4.0.0/js/bootstrap.min.js"></script> 
+	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/themes/base/jquery-ui.css" type="text/css" media="all" />
+	<link href="../../libs/bootstrap-4.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
+</head>
+<body>
+	<div class="container theme-showcase" role="main">
+		<div class="jumbotron">
+			I want to center this div with Bootstrap.
+		</div>
+	</div>
+</body>
 
-<div ng-controller="WeatherController" id="weather-area" ng-if="weatherAvailable">
-    <div class="page-header">
-        <h4>Current weather in {{weather.city}}</h4>
-    </div>
-
-    <div id="weather-table">
-
-        <table class="table table-striped table-bordered">
-            <tbody>
-            <tr>
-                <td><b>Temperature</b></td>
-                <td>
-                    <div id="temp">{{weather.temperature}} &deg;</div>
-                </td>
-            </tr>
-            <tr>
-                <td><b>Description</b></td>
-                <td>
-                    <div id="description">{{weather.description}}</div>
-                </td>
-            </tr>
-            <tr>
-                <td><b>Wind</b></td>
-                <td>
-                    <div id="wind">{{weather.wind}}</div>
-                </td>
-            </tr>
-            </tbody>
-
-        </table>
-
-    </div>
-
-</div>
+</html>
