Added weather icons from https://erikflowers.github.io/weather-icons/

--- a/src/main/resources/static/app/views/weather.html
+++ b/src/main/resources/static/app/views/weather.html
@@ -12,9 +12,11 @@
 	<link href="../../libs/bootstrap-4.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
 <body>
+
 	<div class="container theme-showcase" role="main">
 		<div class="jumbotron">
-			I want to center this div with Bootstrap.
+			hi sunshine!
+			<i class="wi wi-raindrops"></i>
 		</div>
 	</div>
 </body>
