--- a/src/main/resources/static/app/css/style.css
+++ b/src/main/resources/static/app/css/style.css
@@ -1,6 +1,7 @@
 .container {
   position: relative;
   height: 38rem;
+  
 }
 
 .jumbotron {
@@ -8,4 +9,8 @@
   top: 50%;
   left:50%;
   transform: translate(-50%,-50%);
+}
+
+body,div {
+	background: #B2DFDB !important;
 }
