--- a/src/main/resources/static/app/views/weather.html
+++ b/src/main/resources/static/app/views/weather.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Bootstrap Example</title>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
@@ -15,9 +15,9 @@
 
 	<div class="container theme-showcase" role="main">
 		<div class="jumbotron">
-			hi sunshine!
-			<i class="wi wi-raindrops"></i>
+			<i ng-class="weatherIcon" style="font-size: 14em;"></i>
 		</div>
+		
 	</div>
 </body>
 
