--- a/src/main/resources/static/app/views/weather.html
+++ b/src/main/resources/static/app/views/weather.html
@@ -2,22 +2,62 @@
 <html lang="en">
 <head>
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script> 
-	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js" type="text/javascript"></script> 
-	<script src="../../libs/bootstrap-4.0.0/js/bootstrap.min.js"></script> 
-	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/themes/base/jquery-ui.css" type="text/css" media="all" />
-	<link href="../../libs/bootstrap-4.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+<script
+	src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script
+	src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"
+	type="text/javascript"></script>
+<script src="../../libs/bootstrap-4.0.0/js/bootstrap.min.js"></script>
+<link rel="stylesheet"
+	href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/themes/base/jquery-ui.css"
+	type="text/css" media="all" />
+<link href="../../libs/bootstrap-4.0.0/css/bootstrap.min.css"
+	rel="stylesheet" media="screen">
 </head>
 <body>
 
 	<div class="container theme-showcase" role="main">
 		<div class="jumbotron">
-			<i ng-class="weatherIcon" style="font-size: 14em;"></i>
+			<i ng-class="weatherIcon" style="font-size: 16em;"></i>
 		</div>
-		
+		<div class="jumbotron2">
+			<ul class="list-group">
+				<li class="list-group-item borderless-city"><h2>{{weather.city}}</h3></li>
+			</ul>
+		<table class="table">
+    <tbody>
+      <tr>
+        <td>Temperature</td>
+        <td></td>
+        <td>{{weather.temperature}} &#8451</td>
+      </tr>
+      <tr>
+        <td>Pressure</td>
+        <td></td>
+        <td>{{weather.pressure}} hPa</td>
+      </tr>
+      <tr>
+        <td>Humidity</td>
+        <td></td>
+        <td>{{weather.humidity}}</td>
+      </tr>
+      <tr>
+        <td>Sunrise</td>
+        <td></td>
+        <td>{{weather.sunriseTime}}</td>
+      </tr>
+      <tr>
+        <td>Sunset</td>
+        <td></td>
+        <td>{{weather.sunsetTime}}</td>
+      </tr>
+    </tbody>
+  </table>	
+		</div>
+
 	</div>
 </body>
 
