Footer display fix

--- a/src/main/resources/static/app/views/weather.html
+++ b/src/main/resources/static/app/views/weather.html
@@ -63,8 +63,7 @@
 
 </body>
 <footer>
-	<p class="copyright">© Wiktor Dyngosz 2017</p>
-	<p class="links">
+	<p class="copyright">© Wiktor Dyngosz 2017 &nbsp &nbsp &nbsp
 	<a href="https://www.linkedin.com/in/wiktor-dyngosz-aa09a298/">
       		<i class="fa fa-linkedin"></i> 
     	</a>
