--- a/src/main/resources/static/app/views/weather.html
+++ b/src/main/resources/static/app/views/weather.html
@@ -60,17 +60,17 @@
 
 	</div>
 
-
 </body>
 <footer>
-	<p class="copyright">© Wiktor Dyngosz 2017 &nbsp &nbsp &nbsp
-	<a href="https://www.linkedin.com/in/wiktor-dyngosz-aa09a298/">
-      		<i class="fa fa-linkedin"></i> 
-    	</a>
-    	<a class="sidebar-nav-item" href="https://github.com/dyngosz">
-      		<i class="fa fa-github"></i> 
-	    </a></p>
-	
+	<p class="copyright">
+		© Wiktor Dyngosz 2017 &nbsp &nbsp &nbsp <a
+			href="https://www.linkedin.com/in/wiktor-dyngosz-aa09a298/"> <i
+			class="fa fa-linkedin"></i>
+		</a> <a class="sidebar-nav-item" href="https://github.com/dyngosz"> <i
+			class="fa fa-github"></i>
+		</a>
+	</p>
+
 </footer>
 
 
